--- a/backend/templates/login.html
+++ b/backend/templates/login.html
@@ -1,9 +1,25 @@
 {% extends "base.html" %}
+
 {% block content %}
   <h2>Login</h2>
-  <form method="post" action="{{ url_for('auth.login') }}">
-    <label>Username:<br><input name="username" required autofocus></label><br>
-    <label>Password:<br><input type="password" name="password" required></label><br>
-    <button type="submit">Login</button>
+
+  {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+      <ul class="flashes">
+        {% for category, message in messages %}
+          <li class="{{ category }}">{{ message }}</li>
+        {% endfor %}
+      </ul>
+    {% endif %}
+  {% endwith %}
+
+  <form method="POST" action="{{ url_for('auth.login') }}">
+    <label for="username">Username:</label><br>
+    <input type="text" id="username" name="username" required><br><br>
+
+    <label for="password">Password:</label><br>
+    <input type="password" id="password" name="password" required><br><br>
+
+    <button type="submit">Log In</button>
   </form>
 {% endblock %}
