feat: Enhance styles. - Also added docker compatibility, - Updated requirements to match currently used requirements and python-3.10slim

--- a/backend/templates/dashboard.html
+++ b/backend/templates/dashboard.html
@@ -4,7 +4,7 @@
   <h2>Welcome, {{ current_user.Username }}!</h2>
   <p>Your role: <strong>{{ current_user.role }}</strong></p>
 
-  <ul>
+  <ul class="role-menu">
     {% if current_user.role == 'admin' %}
       <li><a href="{{ url_for('users.list_users') }}">Manage Users</a></li>
       <li><a href="{{ url_for('members.list_members') }}">Manage Members</a></li>
@@ -17,15 +17,17 @@
       <li><a href="{{ url_for('staff.list_staff') }}">Manage Staff</a></li>
       <li><a href="{{ url_for('maintenance.get_logs') }}">Manage Maintenance Logs</a></li>
       <li><a href="{{ url_for('calendar.calendar_view') }}">Manage Calendar</a></li>
-
+  
     {% elif current_user.role == 'manager' %}
       <li><a href="{{ url_for('members.list_members') }}">Manage Members</a></li>
       <li><a href="{{ url_for('trainers.list_trainers') }}">Manage Trainers</a></li>
       <li><a href="{{ url_for('classes.view_classes') }}">Manage Classes</a></li>
       <li><a href="{{ url_for('staff.view_staff') }}">Manage Staff</a></li>
       <li><a href="{{ url_for('maintenance.get_logs') }}">Manage Maintenance Logs</a></li>
+  
     {% elif current_user.role == 'trainer' %}
       <li><a href="{{ url_for('calendar.calendar_view') }}">View Class Schedule</a></li>
+  
     {% elif current_user.role == 'member' %}
       <li><a href="{{ url_for('calendar.calendar_view') }}">Manage My Classes</a></li>
     {% endif %}
